fix spelling, update images

--- a/docs/src/pages/styles.module.css
+++ b/docs/src/pages/styles.module.css
@@ -31,8 +31,13 @@
 }
 
 .featureImage {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+.featureTitle {
+  text-align: center;
 }
 
 .getStarted {
